// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Heading > Snapshots > matches snapshot when authenticated > heading-authenticated 1`] = `
<div>
  <header
    class="pa-header css-14s00ml"
  >
    <div
      class="css-5yuwd8"
    >
      <a
        aria-label="Baphomet - Go to homepage"
        class="css-o2l70y"
        data-testid="home-link"
        href="/"
      >
        <h1
          class="css-vvwwy8"
        >
          Baphomet
        </h1>
        <img
          alt="Baphomet logo"
          aria-hidden="true"
          class="css-1u7uypu"
          role="presentation"
          src="/baphy-favicon.png"
        />
      </a>
      <div
        class="css-3sy7va"
      >
        <nav
          aria-label="Main navigation"
          class="css-2w0nze"
          role="navigation"
        >
          <div
            aria-label="Navigation buttons"
            class="pa-button-group horizontal medium css-g48o9w"
            role="group"
          >
            <button
              aria-label="Go to Arena page"
              class="pa-button ghostOnDark small css-1f5ziua"
            >
              Arena
            </button>
            <button
              aria-label="Go to Leader Boards page"
              class="pa-button ghostOnDark small css-1f5ziua"
              disabled=""
            >
              Leader Boards
            </button>
            <button
              aria-label="Go to All Movies page"
              class="pa-button ghostOnDark small css-1f5ziua"
            >
              All Movies
            </button>
          </div>
        </nav>
        <div
          aria-label="User actions"
          class="pa-button-group horizontal medium css-g48o9w"
          role="group"
        >
          <button
            aria-label="Add new movie"
            class="pa-button secondary small css-twe5xh"
            data-testid="add-new-movie-button"
          >
            <svg
              class=""
              color="currentColor"
              fill="none"
              height="17"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="3px"
              viewBox="0 0 24 24"
              width="17"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 4V20M20 12H4"
                stroke="currentColor"
              />
            </svg>
            Add new movie
          </button>
          <button
            aria-label="Sign out of your account"
            class="pa-button primary small css-1il6nhi"
            data-testid="logout-button"
          >
            Log out
          </button>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`Heading > Snapshots > matches snapshot when not authenticated > heading-not-authenticated 1`] = `
<div>
  <header
    class="pa-header css-14s00ml"
  >
    <div
      class="css-5yuwd8"
    >
      <a
        aria-label="Baphomet - Go to homepage"
        class="css-o2l70y"
        data-testid="home-link"
        href="/"
      >
        <h1
          class="css-vvwwy8"
        >
          Baphomet
        </h1>
        <img
          alt="Baphomet logo"
          aria-hidden="true"
          class="css-1u7uypu"
          role="presentation"
          src="/baphy-favicon.png"
        />
      </a>
      <div
        class="css-3sy7va"
      >
        <nav
          aria-label="Main navigation"
          class="css-2w0nze"
          role="navigation"
        >
          <div
            aria-label="Navigation buttons"
            class="pa-button-group horizontal medium css-g48o9w"
            role="group"
          >
            <button
              aria-label="Go to Arena page"
              class="pa-button ghostOnDark small css-1f5ziua"
            >
              Arena
            </button>
            <button
              aria-label="Go to Leader Boards page"
              class="pa-button ghostOnDark small css-1f5ziua"
              disabled=""
            >
              Leader Boards
            </button>
            <button
              aria-label="Go to All Movies page"
              class="pa-button ghostOnDark small css-1f5ziua"
            >
              All Movies
            </button>
          </div>
        </nav>
        <div
          aria-label="Authentication options"
          class="pa-button-group horizontal medium css-g48o9w"
          role="group"
        >
          <button
            aria-describedby="signup-help"
            aria-label="Open sign up form"
            class="pa-button secondary small css-twe5xh"
            data-testid="signup-button"
          >
            Sign Up
          </button>
          <button
            aria-describedby="login-help"
            aria-label="Open log in form"
            class="pa-button primary small css-1il6nhi"
            data-testid="login-button"
          >
            Log in
          </button>
        </div>
        <span
          class="css-1tm92sh"
          id="signup-help"
        >
          Create a new account to add and rate movies
        </span>
        <span
          class="css-1tm92sh"
          id="login-help"
        >
          Sign in to your existing account
        </span>
      </div>
    </div>
  </header>
</div>
`;
